--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@use-gesture/vanilla": "^10.3.0",
         "animejs": "^3.2.1",
         "babel-loader": "^9.1.3",
+        "maplibre-gl": "^3.3.1",
         "normalize.css": "^8.0.1",
         "postcss-custom-media": "^10.0.0",
         "postcss-preset-env": "^9.1.3",
